[metadata]
name = no_im_working
version = 0.1
url = https://github.com/vinhowe/no-im-working
license = MIT
author = vinhowe
author_email = me@howe.vin
description = "Let everyone know you're doing very important work and can't talk to them."

[options]
packages = find:
scripts =
    bin/niw
install_requires =
    PyQt5
